vakaowp-wp-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: vakao-wp
  name: vakao-wp
  namespace: vakao
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: vakao-wp
    spec:
      volumes:
        - hostPath:
            path: /data/vakao/wp-content
          name: wp-content
      containers:
        - name: vakao-wp
          image: wordpress
          volumeMounts:
            - mountPath: /var/www/html/wp-content
              name: wp-content
