vakaowp-db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vakao-db
  name: vakao-db
  namespace: vakao
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: vakao-db
