vakaowp-wp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vakao-wp
  name: vakao-wp
  namespace: vakao
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: vakao-wp
