vakaowp-ingress.yaml
---
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: vakao-ingress
  namespace: vakao
spec:
  rules:
    - host: vakao.pw
      http:
        paths:
          - backend:
              serviceName: vakao-wp
              servicePort: 80
    - host: www.vakao.pw
      http:
        paths:
          - backend:
              serviceName: vakao-wp
              servicePort: 80
